--- a/HelpDesk.DTO/HelpDesk.DTO.csproj
+++ b/HelpDesk.DTO/HelpDesk.DTO.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Parameters\RequestEventParameter.cs" />
     <Compile Include="WorkerUserDTO.cs" />
     <Compile Include="FileUpload\Interface\IFileUploadDTO.cs" />
     <Compile Include="FileUpload\Interface\IFileUploadInfoDTO.cs" />
@@ -64,7 +65,7 @@
     </Compile>
     <Compile Include="StatusRequestDTO.cs" />
     <Compile Include="SimpleDTO.cs" />
-    <Compile Include="CreateOrUpdateRequestDTO.cs" />
+    <Compile Include="Parameters\RequestParameter.cs" />
     <Compile Include="StatusRequestEnum.cs" />
     <Compile Include="CabinetUserDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
