--- a/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
+++ b/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Models\RecoveryPassvordViewModel.cs" />
     <Compile Include="Models\AppLayoutModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\RequestEventParameter.cs" />
     <Compile Include="Models\ViewDataUploadFilesResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
