--- a/HelpDesk.Common/HelpDesk.Common.csproj
+++ b/HelpDesk.Common/HelpDesk.Common.csproj
@@ -69,6 +69,7 @@
   <ItemGroup>
     <Compile Include="AppConstants.cs" />
     <Compile Include="Helpers\EnumExtensions.cs" />
+    <Compile Include="Helpers\ExpressionExtensions.cs" />
     <Compile Include="Helpers\OrderHelper.cs" />
     <Compile Include="Aspects\TransactionBehavior.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
