--- a/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
+++ b/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
@@ -273,6 +273,7 @@
     <Content Include="App\Main\views\requestHistory\list.js" />
     <Content Include="App\Main\views\request\addIS.js" />
     <Content Include="App\Main\views\request\addTO.js" />
+    <Content Include="App\Main\views\employee\employee.js" />
     <Content Include="App\Main\views\shared\fileDelete.js" />
     <Content Include="App\Main\views\request\fileUpload.js" />
     <Content Include="App\Main\views\request\request.js" />
@@ -390,6 +391,7 @@
     <Content Include="App\Main\views\request\addIS.cshtml" />
     <Content Include="App\Main\views\request\addTO.cshtml" />
     <Content Include="App\Main\views\employee\list.cshtml" />
+    <Content Include="App\Main\views\employee\employee.cshtml" />
     <None Include="Scripts\jquery-2.1.3.intellisense.js" />
     <None Include="Scripts\jquery-2.1.4-vsdoc.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
