Вычисление даты окончания срока по заявке в зависимости от системных настроек

--- a/HelpDesk.Migration/HelpDesk.Migration.csproj
+++ b/HelpDesk.Migration/HelpDesk.Migration.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="IHelpDeskMigrationRunner.cs" />
     <EmbeddedResource Include="Migrations\0001\create-database.sql" />
+    <Compile Include="Migrations\0002\AlterSettings.cs" />
     <Compile Include="Migrations\0002\AlterObjectType.cs" />
     <Compile Include="Migrations\0001\InitialDeployment.cs" />
     <Compile Include="MigratorInstaller.cs" />
