--- a/HelpDesk.Test/HelpDesk.Test.csproj
+++ b/HelpDesk.Test/HelpDesk.Test.csproj
@@ -64,6 +64,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DataService\DateTimeServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DataService\CabinetUserServiceTest.cs" />
   </ItemGroup>
