--- a/HelpDesk.Migration/HelpDesk.Migration.csproj
+++ b/HelpDesk.Migration/HelpDesk.Migration.csproj
@@ -70,7 +70,8 @@
     <Compile Include="Migrations\0002\AlterSettings.cs" />
     <Compile Include="Migrations\0002\AlterObjectType.cs" />
     <Compile Include="Migrations\0001\InitialDeployment.cs" />
-    <Compile Include="Migrations\0003\AlterWorkCalendarItem.cs" />
+    <Compile Include="Migrations\0003\CreateWorkCalendarItem.cs" />
+    <Compile Include="Migrations\0004\CreateWorkScheduleItem.cs" />
     <Compile Include="MigratorInstaller.cs" />
     <Compile Include="HelpDeskMigrationRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
