Исправление багов. Фиксация факта пользовательского входа в UserSession

--- a/Data/Implementation/HelpDesk.Data.NHibernate/HelpDesk.Data.NHibernate.csproj
+++ b/Data/Implementation/HelpDesk.Data.NHibernate/HelpDesk.Data.NHibernate.csproj
@@ -89,6 +89,7 @@
     <Content Include="hibernate.cfg.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Mapping\UserSession.hbm.xml" />
     <EmbeddedResource Include="Mapping\WorkScheduleItem.hbm.xml" />
     <EmbeddedResource Include="Mapping\WorkCalendarItem.hbm.xml" />
     <EmbeddedResource Include="Mapping\TypeWorkerUser.hbm.xml" />
