--- a/HelpDesk.Migration/HelpDesk.Migration.csproj
+++ b/HelpDesk.Migration/HelpDesk.Migration.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Migrations\0001\InitialDeployment.cs" />
     <Compile Include="Migrations\0003\CreateWorkCalendarItem.cs" />
     <Compile Include="Migrations\0004\CreateWorkScheduleItem.cs" />
+    <Compile Include="Migrations\0005\CreateUserSession.cs" />
     <Compile Include="MigratorInstaller.cs" />
     <Compile Include="HelpDeskMigrationRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
