--- a/Presentation/HelpDesk.CabinetWebApp/packages.config
+++ b/Presentation/HelpDesk.CabinetWebApp/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net461" />
