--- a/HelpDesk.Entity/HelpDesk.Entity.csproj
+++ b/HelpDesk.Entity/HelpDesk.Entity.csproj
@@ -45,6 +45,7 @@
     <Compile Include="BaseRequest.cs" />
     <Compile Include="BaseRequestEvent.cs" />
     <Compile Include="UserSession.cs" />
+    <Compile Include="DescriptionProblem.cs" />
     <Compile Include="WorkScheduleItem.cs" />
     <Compile Include="WorkCalendarItem.cs" />
     <Compile Include="RawStatusRequestEnum.cs" />
