--- a/HelpDesk.Migration/HelpDesk.Migration.csproj
+++ b/HelpDesk.Migration/HelpDesk.Migration.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Migrations\0004\CreateWorkScheduleItem.cs" />
     <Compile Include="Migrations\0005\CreateUserSession.cs" />
     <Compile Include="Migrations\0006\AlterSettings1.cs" />
+    <Compile Include="Migrations\0007\CreateDescriptionProblem.cs" />
     <Compile Include="MigratorInstaller.cs" />
     <Compile Include="HelpDeskMigrationRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,6 +82,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
