--- a/Data/Implementation/HelpDesk.Data.NHibernate.Repository/HelpDesk.Data.NHibernate.Repository.csproj
+++ b/Data/Implementation/HelpDesk.Data.NHibernate.Repository/HelpDesk.Data.NHibernate.Repository.csproj
@@ -81,6 +81,7 @@
     <Compile Include="BaseRepository.cs" />
     <Compile Include="NHibernateRepositoryInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
