--- a/HelpDesk.Migration/HelpDesk.Migration.csproj
+++ b/HelpDesk.Migration/HelpDesk.Migration.csproj
@@ -65,7 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IHelpDeskMigrationRunner.cs" />
+    <Compile Include="IMigrationRunner.cs" />
     <EmbeddedResource Include="Migrations\0001\create-database.sql" />
     <Compile Include="Migrations\0002\AlterSettings.cs" />
     <Compile Include="Migrations\0002\AlterObjectType.cs" />
@@ -76,7 +76,7 @@
     <Compile Include="Migrations\0006\AlterSettings1.cs" />
     <Compile Include="Migrations\0007\CreateDescriptionProblem.cs" />
     <Compile Include="MigratorInstaller.cs" />
-    <Compile Include="HelpDeskMigrationRunner.cs" />
+    <Compile Include="MigrationRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
