Исправление бага с правами: возможность удаления/редактирования/добавления заявок для Исполнителей

--- a/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
+++ b/Presentation/HelpDesk.WorkerWebApp/HelpDesk.WorkerWebApp.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Models\AppLayoutModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Models\RequestEventParameter.cs" />
+    <Compile Include="Models\RequestHistoryModel.cs" />
     <Compile Include="Models\RequestObjectTOParameter.cs" />
     <Compile Include="Models\RequestObjectISParameter.cs" />
     <Compile Include="Models\ViewDataUploadFilesResult.cs" />
