Доабавление возможности прикреплять к заявке кроме изображений word- и excel-файлы

--- a/Presentation/HelpDesk.CabinetWebApp/HelpDesk.CabinetWebApp.csproj
+++ b/Presentation/HelpDesk.CabinetWebApp/HelpDesk.CabinetWebApp.csproj
@@ -305,6 +305,8 @@
     <Content Include="Content\loading-bar.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <None Include="Resources\excel.png" />
+    <None Include="Resources\word.png" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
