--- a/HelpDesk.Common/HelpDesk.Common.csproj
+++ b/HelpDesk.Common/HelpDesk.Common.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -70,6 +71,7 @@
     <Compile Include="AppConstants.cs" />
     <Compile Include="Helpers\EnumExtensions.cs" />
     <Compile Include="Helpers\ExpressionExtensions.cs" />
+    <Compile Include="Helpers\ImageExtensions.cs" />
     <Compile Include="Helpers\OrderHelper.cs" />
     <Compile Include="Aspects\TransactionBehavior.cs" />
     <Compile Include="Helpers\StringHelper.cs" />
