Перемещение файла ViewDataUploadFilesResult.cs

--- a/Presentation/HelpDesk.Web.Common/HelpDesk.Web.Common.csproj
+++ b/Presentation/HelpDesk.Web.Common/HelpDesk.Web.Common.csproj
@@ -87,7 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BaseFileUploadController.cs" />
-    <Compile Include="Controllers\ViewDataUploadFilesResult.cs" />
+    <Compile Include="Models\ViewDataUploadFilesResult.cs" />
     <Compile Include="Models\JsonFiles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
