--- a/Presentation/HelpDesk.Web.Common/HelpDesk.Web.Common.csproj
+++ b/Presentation/HelpDesk.Web.Common/HelpDesk.Web.Common.csproj
@@ -116,7 +116,6 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Resources\Resource.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -128,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\word.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\blank.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
