Очередь сообщений (продолжение разработки)

--- a/HelpDesk.Common/HelpDesk.Common.csproj
+++ b/HelpDesk.Common/HelpDesk.Common.csproj
@@ -69,7 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConstants.cs" />
-    <Compile Include="EventBus\AppEvents\IAppEvent.cs" />
+    <Compile Include="EventBus\AppEvents\IRequestEvent.cs" />
     <Compile Include="EventBus\AppEvents\UserRegisterAppEvent.cs" />
     <Compile Include="EventBus\AppEvents\UserPasswordRecoveryAppEvent.cs" />
     <Compile Include="EventBus\AppEvents\RequestDeedlineAppEvent.cs" />
