--- a/Services/HelpDesk.ConsumerEventSrvice/App.config
+++ b/Services/HelpDesk.ConsumerEventSrvice/App.config
@@ -38,4 +38,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="mailer@mailer.ru">
+        <network 
+          host="192.168.0.1" 
+          userName="mailer" 
+          password="mailer" 
+          port="25" 
+          enableSsl="false" />
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
